--- a/NLP Test.ipynb
+++ b/NLP Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -627,6 +627,29 @@
     "y_t = tweets_test.polarity_bin.values\n",
     "result = np.abs(y_t - y)\n",
     "np.bincount(result)[0]/float(result.shape[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tweets_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5b9ac2f7ab63>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtweets_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tweets_test' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tweets_test.shape"
    ]
   },
   {
